update-manager (1:0.125.7) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - add quirk handler to mark the dependencies of
      language-support-translations-* as manual on upgrade
  
      The language-support-translations- packages are removed in 
      karmic and would otherwise be marked as auto-removable.
      (LP: #439296)
  * DistUpgrade/DistUpgrade.cfg.hardy:
    - add ability to upgrade from hardy to karmic (as asked for
      by Jonathan Riddell)
  * DistUpgrade/DistUpgradeCache.py:
    - workaround issues with kdesu when it drop the permission bits
      in a tmpdir (thanks to Jonathan Riddell)
  * po/ 
    - updated from launchpad (required as during a release upgrade
      we can't use langpacks)
  * UpdateManager/backend/InstallBackendAptdaemon.py:
    - give up lock before running aptdaemon (LP: #445920)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Sep 2009 13:32:13 +0200

update-manager (1:0.125.6) karmic; urgency=low

  * AutoUpgradeTester/UpgradeTestBackendSSH.py:
    - use ssh batch mode
  * AutoUpgradeTester/auto-upgrade-tester:
    - show log files
  * DistUpgrade/DevelReleaseAnnouncement:
    - update for BETA
  * DistUpgrade/DistUpgradeCache.py:
    - add new rule to ensure that base meta packages are always
      kept installed. this helps the server upgrade with the syslogd
      to rsyslog transition

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Sep 2009 18:51:49 +0200

update-manager (1:0.125.5) karmic; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py 
    - fix kbluetooth name to kbluetooth4

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 28 Sep 2009 20:18:49 +0100

update-manager (1:0.125.4) karmic; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - fix brown paperbag bug in quirks hanlding  (LP: #436302)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix crash in gettext initialization (LP: #436438)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Sep 2009 13:08:46 +0200
